src/objects/Fundraising_Event__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fr_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funraise Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fundraising Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funraise Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>